<package>
  <name>caffe_catkin</name>
  <version>0.0.0</version>
  <description>caffe_catkin</description>
  <maintainer email="libo24@baidu.com">libo24</maintainer>

  <license>See package</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <build_depend>gflags_catkin</build_depend>
  <build_depend>unzip</build_depend>
</package>
